force-app/main/default/objects/SOEMs_Account_Mapping__c/SOEMs_Account_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SOEMs_Account_Mapping</label>
</CustomObject>