force-app/main/default/objects/SOEMs_Account_Mapping__c/fields/Default_Competency__c.field-meta.xml
<CustomField>
    <fullName>Default_Competency__c</fullName>
    <label>Default Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>