force-app/main/default/objects/SOEMs_Account_Mapping__c/fields/GPU_Genius_Groups__c.field-meta.xml
<CustomField>
    <fullName>GPU_Genius_Groups__c</fullName>
    <label>GPU Genius Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>