force-app/main/default/objects/SOEMs_Account_Mapping__c/fields/Permissions_Portal_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permissions_Portal_Groups__c</fullName>
    <label>Permissions &amp; Portal Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>