force-app/main/default/objects/SOEMs_Account_Mapping__c/listViews/All_SOEM.listView-meta.xml
<ListView>
    <fullName>All_SOEM</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Default_Competency__c</columns>
    <columns>GPU_Genius_Groups__c</columns>
    <columns>Permissions_Portal_Groups__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All SOEM</label>
    <language>en_US</language>
</ListView>